# python-fintech

./: .gitignore  pyproject.toml
fintech/: read-data.ipynb
